# g-exam

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  exam-manager-backup-2026-03-18.json  manage.py  pyproject.toml
core/: models.py
docs/: MIGRATION_DJANGO.md
exams/: admin.py  context_processors.py  forms.py  grading_views.py  middleware.py  models.py  urls.py  views.py
exams/management/commands/: create_super_admin.py  seed_forfaits.py
exams/migrations/: 0001_initial.py  0002_exam_enriched_fields.py  0002_historicalplan_max_establishments_and_more.py  0002_plan_max_establishments.py  0002_plan_userprofile.py  0003_exam_code_optional.py  0003_seed_plans.py  0004_exam_grading_scale.py  0005_teachers_score_history_harmonization.py
exams/services/: backup.py  calculations.py  excel_export.py  excel_import.py  pdf_export.py  rankings.py  room_dispatch.py  score_history.py  statistics.py
exams/templatetags/: exam_extras.py
g_exam/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: app.js  scores.js
templates/: base.html  landing.html
templates/correction/: base.html  grade_entry.html  login.html  subjects.html
templates/exams/: dashboard.html  exam_create.html  exam_import.html  exam_setup.html  select_exam.html
templates/exams/exports/: index.html
templates/exams/rankings/: index.html
templates/exams/rooms/: form.html  index.html
templates/exams/schools/: form.html  list.html
templates/exams/scores/: by_student.html  by_subject.html  harmonize.html  history.html  index.html
templates/exams/settings/: index.html
templates/exams/statistics/: index.html
templates/exams/students/: form.html  import.html  list.html
templates/exams/subjects/: form.html  list.html
templates/exams/teachers/: assign.html  (+3 more)
templates/partials/: header.html  sidebar.html
templates/registration/: login.html
