[tool.poetry]
name = "g-exam"
version = "1.0.0"
description = "Application Django de gestion d'examens scolaires"
authors = ["G-Exam"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9"
openpyxl = "^3.1"
reportlab = "^4.0"
django-environ = "^0.11"
Pillow = "^10.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
